@@ -1,3 +1,5 @@
+  - event로 접속한 사용자의 session timeout 을 10분으로 설정 (#107)
+
 v0.5.7    Mon, 29 Oct 2018 19:16:24 +0900
   - 각 event 별 목록 (#107)
 
